SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

https://sourceforge.net/p/squirrel-sql/feature-requests/620/
  MS-Excel export: Options to choose fonts for header- and other rows
  See right mouse menu of UI tables --> "Export CSV / MS Excel / XML / JSON ..."

https://sourceforge.net/p/squirrel-sql/feature-requests/619/
  SQuirreL's main frame title is configurable,
  see menu File --> Global Preferences --> tab General on the lower right.

When an Alias is read only, see https://github.com/squirrel-sql-client/squirrel-sql-code/issues/56,
  the status bars of its Session tabs now show a "RO" label on the right.

Pull request: https://github.com/squirrel-sql-client/squirrel-sql-code/pull/57
  MSSQL: Added support for MSSQL Server datetimeoffset datatype.
  Thanks to fvalenduc for the pull request

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/56
  Aliases can be switched to read-only. If an Alias is switched to read-only its Sessions are
  - only allowed to execute SQLs that start with the SELECT keyword,
  - all functions that change data, e.g. making tables editable, will not be executed.
  When read-only is active and non-SELECT SQLs are executed or data changing functions are called
  warnings are displayed in SQuirreL's message panel.
  See the new check box at the lower left of the Alias dialog.

Upgraded JSQL-Parser (https://github.com/JSQLParser/JSqlParser) to version 5.1.

Look and Feel Plugin: The Look and Feel preferences now allows to adjust several controls,
  e.g the SQL editor and the message panel, to dark Look and Feels.
  See menu File -- > Global Preferences --> tab "L & F"
  Note: This option replaces the previous theme choice at tab "General".