@@ -204,6 +204,10 @@ startAlias.image=startAlias.png
 
 MeanDeviationDefinition.image=pics/MeanDeviationDefinition.png
 
+copy2bottom.image=copy2bottom.png
+copy2caret.image=copy2caret.png
+
+
 ########
 # Configuration information for ObjectTreeInternalFrame.
 ########
