@@ -13,6 +13,10 @@ ResultTab.resultsTabTitle=Results
 ResultTab.rowCountLabel=Row Count:
 ResultTab.statementLabel=SQL:
 
+ResultTab.copy.sql.tooltip=Copy SQL to clipboard
+ResultTab.copy.to.caret.tooltip=Copy SQL to active editors caret
+ResultTab.copy.to.bottom.tooltip=Copy SQL to active editors bottom
+
 SQLPanel.copylastbutton.hint=Copy current SQL history to entry area
 SQLPanel.limitrowscheckbox.label=Limit rows: 
 
